--- a/.golangci.yml
+++ b/.golangci.yml
@@ -90,7 +90,7 @@ linters:
     - govet
     - ineffassign
     - lll
-    - misspell
+    # - misspell
     - nakedret
     - noctx
     - nolintlint
